Here i am added a AdminFunctionView, and separate a  roles in Tabbar!
