# GlobalErrorHandling/openapi.json
@@ -294,7 +294,7 @@
 "200": {
 "description": "OK",
 "content": {
-"*/*": {
+"application/json": {
 "schema": {
 "type": "array",
 "items": {
@@ -457,6 +457,13 @@
 "properties": {
 "token": {
 "type": "string"
+},
+"role": {
+"type": "string",
+"enum": [
+"CLIENT",
+"ADMIN"
+]
 }
 }
 },
